GUIDEDTOUR-10: Implement Tour template and tours overivew
- Introduced Macros for modal dialogs to add and delete tasks in the Guided Tour UI.
- Implemented TaskJson for handling task data retrieval via JSON.
-  Added a livedata to view/create/delete tasks in  TourClassSheet
- Created tour template
- Updated WebHome to display a list of tours with actions for editing and deleting.
- Added description field to TourClass and TourTemplate
- added a sort option for the solr query
- code refactoring